@@ -27,6 +27,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.*;
+import inetsoft.web.security.RequiredPermission;
+import inetsoft.web.security.Secured;
+import inetsoft.sree.security.*;
 
 import java.awt.*;
 import java.util.List;
@@ -50,6 +53,11 @@ public class PhysicalGraphModelController {
       this.physicalModelManager = physicalModelManager;
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PutMapping("/api/data/physicalmodel/graph/size/{runtimeId}")
    public void updateGraphPaneSize(@PathVariable("runtimeId") String runtimeId,
                                    @RequestBody Rectangle bounds)
@@ -57,6 +65,11 @@ public class PhysicalGraphModelController {
       graphService.updateGraphPaneSize(runtimeId, bounds.width, bounds.height);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PutMapping("/api/data/physicalmodel/graph/node/width/{runtimeId}")
    public boolean updateGraphNodeWidth(@PathVariable("runtimeId") String runtimeId,
                                        @RequestParam("table") String table,
@@ -71,18 +84,28 @@ public class PhysicalGraphModelController {
             this.runtimePartitionService.getRuntimePartition(runtimeId);
          XPartition partition = runtimePartition.getPartition();
 
-         Rectangle box = partition.getRuntimeAliasTableBounds(alias).getBounds();
+         Rectangle rectangle = partition.getRuntimeAliasTableBounds(alias);
 
-         if(box != null && box.width != width) {
-            box.width = width;
-            partition.setRuntimeAliasTableBounds(alias, box);
-            changed = true;
+         if(rectangle != null ) {
+            Rectangle box = rectangle.getBounds();
+
+            if(box != null && box.width != width) {
+               box.width = width;
+               partition.setRuntimeAliasTableBounds(alias, box);
+               changed = true;
+               runtimePartitionService.saveRuntimePartition(runtimePartition);
+            }
          }
       }
 
       return graphService.updateGraphNodeWidth(runtimeId, table, width) || changed;
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PostMapping("/api/data/physicalmodel/graph")
    public JoinGraphModel physicalGraphModel(@RequestBody GetGraphModelEvent event)
       throws Exception
@@ -96,9 +119,21 @@ public class PhysicalGraphModelController {
          physicalModelService.createModel(ds, dataModel, partition,
             event.getTableJoinInfo() == null);
 
-      return JoinGraphModel.convertModel(pmModel, event, partition);
+      JoinGraphModel graphModel = JoinGraphModel.convertModel(pmModel, event, partition);
+
+      if(event.getTableJoinInfo() != null && event.getTableJoinInfo().isAutoCreateColumnJoin()) {
+         // partition may have been updated, need to save
+         runtimePartitionService.updatePartition(event.getRuntimeID(), partition);
+      }
+
+      return graphModel;
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PutMapping("/api/data/physicalmodel/graph/layout/{col}/**")
    public void autoLayout(@PathVariable("col") boolean col,
                           @RemainingPath String runtimeId,
@@ -108,6 +143,11 @@ public class PhysicalGraphModelController {
          runtimeId, event.getDatasource(), event.getPhysicalName(), col);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @GetMapping("/api/data/physicalmodel/join-edit/open/{oldRuntimeId}")
    public String openJoinEditPane(@PathVariable("oldRuntimeId") String oldRuntimeId)
       throws Exception
@@ -115,6 +155,11 @@ public class PhysicalGraphModelController {
       return this.runtimePartitionService.openNewRuntimePartition(oldRuntimeId);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @GetMapping("/api/data/physicalmodel/join-edit/close")
    public void closeJoinEditPane(@RequestParam("originRuntimeId") String originRuntimeId,
                                  @RequestParam("newRuntimeId") String newRuntimeId,
@@ -127,6 +172,11 @@ public class PhysicalGraphModelController {
     * Move table. need fix scale
     * {@see PhysicalGraphModel#fixBounds}
     */
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PutMapping("/api/data/physicalmodel/graph/move")
    public void moveTable(@RequestBody MoveGraphEvent event) {
       Rectangle rectangle = event.getBounds();
@@ -165,8 +215,15 @@ public class PhysicalGraphModelController {
       if(!StringUtils.isEmpty(aliasName)) {
          partition.setRuntimeAliasTableBounds(aliasName, rectangle);
       }
+
+      runtimePartitionService.saveRuntimePartition(rp);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PostMapping("/api/data/physicalmodel/join")
    public void createJoin(@RequestBody TableDetailJoinInfo joinInfo) throws Exception {
       XPartition partition = this.runtimePartitionService.getPartition(joinInfo.getRuntimeId());
@@ -178,27 +235,50 @@ public class PhysicalGraphModelController {
             partition));
 
       partition.addRelationship(join);
+      runtimePartitionService.updatePartition(joinInfo.getRuntimeId(), partition);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @DeleteMapping("/api/data/physicalmodel/table/{runtimeId}")
    public void clearTable(@PathVariable("runtimeId") String runtimeId) {
       XPartition partition = this.runtimePartitionService.getPartition(runtimeId);
       partition.clearTable();
       partition.clearRelationship();
+      runtimePartitionService.updatePartition(runtimeId, partition);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @DeleteMapping("/api/data/physicalmodel/join/{runtimeId}")
    public void clearJoin(@PathVariable("runtimeId") String runtimeId) {
       XPartition partition = this.runtimePartitionService.getPartition(runtimeId);
       partition.clearRelationship();
       partition.removeAllAutoAliases();
+      runtimePartitionService.updatePartition(runtimeId, partition);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PostMapping("/api/data/physicalmodel/join/delete")
    public void deleteJoin(@RequestBody TableDetailJoinInfo joinInfo) {
       deleteJoins(joinInfo);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PostMapping("/api/data/physicalmodel/joins/delete")
    public void deleteJoins(@RequestBody TableJoinInfo joinInfo)
    {
@@ -211,11 +291,17 @@ public class PhysicalGraphModelController {
       joinInfo.setTargetTable(DatabaseModelUtil.getOutgoingAutoAliasSourceOrTable(
          joinInfo.getTargetTable(), partition, applyAliasPartition));
 
-      List<XRelationship> joins = this.findJoin(joinInfo);
+      List<XRelationship> joins = this.findJoin(partition, joinInfo);
 
       joins.forEach(join -> physicalModelManager.deleteJoin(partition, join));
+      runtimePartitionService.updatePartition(joinInfo.getRuntimeId(), partition);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @GetMapping("/api/data/physicalmodel/graph/node/refresh")
    public void refreshTable(String runtimeId, String table) {
       XPartition partition = this.runtimePartitionService.getPartition(runtimeId);
@@ -223,27 +309,45 @@ public class PhysicalGraphModelController {
 
       if(partitionTable != null) {
          partitionTable.removeMetaData();
+         runtimePartitionService.updatePartition(runtimeId, partition);
       }
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PutMapping("/api/data/physicalmodel/join")
    public void editJoin(@RequestBody EditJoinEvent event) {
-      List<XRelationship> joins = findJoin(event.getDetailJoinInfo());
+      XPartition partition =
+         runtimePartitionService.getPartition(event.getDetailJoinInfo().getRuntimeId());
+      List<XRelationship> joins = findJoin(partition, event.getDetailJoinInfo());
 
-      if(joins.size() < 1) {
+      if(joins.isEmpty()) {
          return;
       }
 
-      XRelationship join = joins.get(0);
-
+      XRelationship join = joins.getFirst();
       event.getJoinModel().store(join.getDependentTable(), join);
+      runtimePartitionService.updatePartition(event.getDetailJoinInfo().getRuntimeId(), partition);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PutMapping("/api/data/physicalmodel/graph/alias/status")
    public boolean hasDuplicateCheck(@RequestBody CheckTableAliasEvent event) {
       return physicalModelManager.hasDuplicateCheck(event);
    }
 
+   @Secured(@RequiredPermission(
+      resourceType = ResourceType.PORTAL_TAB,
+      resource = "Data",
+      actions = ResourceAction.ACCESS
+   ))
    @PostMapping("/api/data/physicalmodel/graph/alias")
    public StringWrapper createAlias(@RequestParam("runtimeId") String runtimeId,
                                     @RequestParam("table") String table,
@@ -269,8 +373,7 @@ public class PhysicalGraphModelController {
       return null;
    }
 
-   private List<XRelationship> findJoin(TableJoinInfo joinInfo) {
-      XPartition partition = this.runtimePartitionService.getPartition(joinInfo.getRuntimeId());
+   private List<XRelationship> findJoin(XPartition partition, TableJoinInfo joinInfo) {
       Enumeration<XRelationship> relationships = partition.getRelationships(true);
 
       List<XRelationship> result = new ArrayList<>();
